2001-06-04  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-edit-string): Set 'buffer-file-coding-system'
	(for hints thanks to Eli Zaretskii).

2001-06-04  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-msgfmt-version-check): New. Check for GNU gettext
	0.10.36 or newer. Re-written by Stefan Monnier.
	(po-validate): Use 'po-msgfmt-version-check'.
	(po-validate): Use 'null-device' instead of literal "/dev/null".
	Reported by Eli Zaretskii.

2001-05-23  Bruno Haible  <haible@clisp.cons.org>

	* gettext-0.10.38 released.

2001-05-22  Bruno Haible  <haible@clisp.cons.org>

	* gettextize.in: Copy plural.c and touch it afterwards.

2001-05-21  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* gettextize.in: Check for configure.ac in addition to configure.in.

2001-05-12  Paul Eggert  <eggert@twinsun.com>

	* gettextize.in: Replace "test -e" with "test -f", since the 'test'
	builtin of Solaris 8 /bin/sh doesn't grok "test -e".

2001-05-11  Bruno Haible  <haible@clisp.cons.org>

	* gettextize.in: Tell the user about glibc21.m4.

2001-05-09  Bruno Haible  <haible@clisp.cons.org>

	* po-mode.el (po-replace-revision-date): For the timezone, use RFC 822
	format [+/-]HHMM, not [+/-]HH:MM. Reported by Jan D.

2001-04-19  Bruno Haible  <haible@clisp.cons.org>

	* gettext-0.10.37 released.

2001-03-29  Bruno Haible  <haible@clisp.cons.org>

	* gettext-0.10.36 released.

2001-03-25  Bruno Haible  <haible@clisp.cons.org>

	* combine-sh: Remove file.
	* Makefile.am (EXTRA_DIST): Remove it.

2001-03-22  Bruno Haible  <haible@clisp.cons.org>

	* po-mode.el (po-default-file-header): Replace ENCODING with 8-bit.

2001-03-21  Bruno Haible  <haible@clisp.cons.org>

	* gettextize.in: Mention where to get config.guess and config.sub.

2001-03-20  Bruno Haible  <haible@clisp.cons.org>

	* gettextize.in: Verbosity: describe each action being done. Make the
	po/ChangeLog entry more intelligent.

2001-03-10  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-font-lock-keywords): Respect entry types